[gd_scene load_steps=2 format=3 uid="uid://baqw0jpdvtogg"]

[ext_resource type="Script" uid="uid://bh7ktwxdlcfx7" path="res://hud.gd" id="1_37p78"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_37p78")

[node name="scoreLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 60
text = "Score:"

[node name="messageTimer" type="Timer" parent="."]
one_shot = true

[node name="mainTitle" type="Label" parent="."]
offset_left = 325.0
offset_top = 221.0
offset_right = 810.0
offset_bottom = 418.0
theme_override_font_sizes/font_size = 100
